k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pipelineiq-ingress
  namespace: pipelineiq
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  tls:
    - hosts:
        - pipelineiq.example.com
      secretName: pipelineiq-tls
  rules:
    - host: pipelineiq.example.com
      http:
        paths:
          - path: /api/webhooks/github
            pathType: Prefix
            backend:
              service:
                name: webhook-service
                port:
                  number: 8087
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8081
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: dashboard-api
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
